...
          url: remoteIllustrationUrls.validStampMosaïcLarge,
          backgroundColor: 'positive01',
        }}
        title="Réservation confirmée&nbsp;!"
        subtitle={`${amountLeftText}Tu peux retrouver toutes les informations concernant ta réservation sur l’application.`}
        buttonPrimary={{
          wording: 'Voir ma réservation',
          onPress: displayBookingDetails,
        }}
        buttonSecondary={{
          wording: 'Partager l’offre',
          onPress: pressShareOffer,
        }}
...
