...
      SubcategoryIdEnumv2.SPECTACLE_REPRESENTATION,
      SubcategoryIdEnumv2.FESTIVAL_SPECTACLE,
    ],
  },
  {
    searchGroupName: SearchGroupNameEnumv2.LIVRES,
    label: 'Livres',
    includedSubcategoryIds: [
      SubcategoryIdEnumv2.LIVRE_PAPIER,
      SubcategoryIdEnumv2.LIVRE_NUMERIQUE,
      SubcategoryIdEnumv2.LIVRE_AUDIO_PHYSIQUE,
      SubcategoryIdEnumv2.TELECHARGEMENT_LIVRE_AUDIO,
    ],
...
