...
  if (user?.firstName && user?.lastName) {
    userFullName = `${user.firstName}\u00a0${user.lastName}`
  }

  return (
    <View style={style}>
      <Typo.Title4 {...getHeadingAttrs(2)}>Ma réservation</Typo.Title4>
      <StyledViewGap gap={5}>
        {userFullName ? (
          <SectionRow
            title={userFullName}
            accessibilityLabel={`Au nom de ${userFullName}`}
            renderTitle={(title) => (
...
