...
        onLeftIconPress: undefined,
        children: <BookingImpossible />,
      }
    }

    return {
      title: 'Détails de la réservation',
      leftIconAccessibilityLabel: undefined,
      leftIcon: undefined,
      onLeftIconPress: undefined,
      children: <BookingDetails stocks={stocks} fromOfferId={fromOfferId} />,
    }
  }
...
