...

const IdentificationForkUbbleContent: FunctionComponent = () => {
  return (
    <Container>
      <JustifiedLeftTitle title="S’identifier en 2 min avec&nbsp;:" />
      <IdentificationForkButton
        Title={<Typo.ButtonText>Ma pièce d’identité</Typo.ButtonText>}
        Subtitle={<StyledCaption>Carte d’identité ou passeport</StyledCaption>}
        icon={Ubble}
        navigateTo={{ screen: 'SelectIDOrigin' }}
        onBeforeNavigate={() => analytics.logChooseUbbleMethod(IdentityCheckMethod.ubble)}
        key={0}
      />
      <StyledSeparatorWithText>
        <SeparatorWithText label="ou" />
      </StyledSeparatorWithText>
      <IdentificationForkButton
        Title={<Typo.ButtonText>Mes codes ÉduConnect</Typo.ButtonText>}
        Subtitle={<StyledCaption>Fournis par ton établissement scolaire</StyledCaption>}
        icon={Mariane}
        navigateTo={{ screen: 'IdentityCheckEduConnect' }}
        onBeforeNavigate={() => analytics.logChooseEduConnectMethod(IdentityCheckMethod.ubble)}
        key={1}
      />
...
