...
            <Typo.ButtonText>français</Typo.ButtonText>
          </Text>
        }
        icon={BicolorFrance}
        navigateTo={{ screen: Platform.OS === 'web' ? 'SelectPhoneStatus' : 'SelectIDStatus' }}
        key={1}
        accessibilityLabel="J’ai une carte d’identité ou un passeport français"
        onBeforeNavigate={() =>
          amplitude.logEvent('set_id_origin_clicked', { type: IDOrigin.FRANCE })
        }
      />
      <Spacer.Column numberOfSpaces={7} />
      <SeparatorWithText label="ou" />
      <Spacer.Column numberOfSpaces={7} />
      <SecondButtonList
        label="J’ai un titre de séjour, une carte d’identité ou un passeport étranger."
        leftIcon={BicolorEarth}
        navigateTo={{ screen: 'DMSIntroduction', params: { isForeignDMSInformation: true } }}
        onBeforeNavigate={() =>
          amplitude.logEvent('set_id_origin_clicked', { type: IDOrigin.FOREIGN })
        }
      />
...
