...
  const { goBack } = useNavigation<UseNavigationType>()
  return (
    <PageWithHeader
      shouldLimitWidth
      title="Oubli de mot de passe"
      shouldDisplayBackButton={false}
      RightButton={<RightButtonText onClose={goBack} wording="Quitter" />}
      scrollChildren={
        <EmailSentGeneric
          title="Clique sur le lien de réinitialisation reçu par e-mail"
          consultFaq={{ url: env.FAQ_LINK_RESET_PASSORD_EMAIL_NOT_RECEIVED }}
          email={route.params.email}
        />
...
