...
      }

  return (
    <GenericInfoPage
      withGoBack
      illustration={StyledLogoDMS}
      title="Identifie-toi sur le site demarche.numerique.gouv.fr"
      buttonPrimary={{
        wording: 'Aller sur le site',
        accessibilityLabel: 'Aller sur le site de demarche.numerique.gouv.fr',
        ...toDMSWebsiteButtonProps,
      }}>
      <Container>
...
