...
const accessibilityUrl = { url: `${WEBAPP_V2_URL}/accessibilite/declaration` }
const rightsDefenderUrl = { url: 'https://formulaire.defenseurdesdroits.fr/' }
const rightsDelegateUrl = { url: 'https://www.defenseurdesdroits.fr/saisir/delegues' }

export function AccessibilityDeclaration() {
  return (
    <SecondaryPageWithBlurHeader title="Déclaration d’accessibilité" enableMaxWidth={false}>
      <TypoDS.Body>
        Le pass Culture s’engage à rendre son site internet accessible conformément à l’article 47
        de la loi n° 2005-102 du 11 février 2005. À cette fin, il met en œuvre la stratégie et les
        actions suivantes&nbsp;:
      </TypoDS.Body>
      <StyledView>
...
            <TypoDS.BodyXs>
              <InternalTouchableLink
                as={ButtonInsideText}
                typography="BodyAccentXs"
                wording="Schéma pluriannuel d’accessibilité 2022 - 2025"
                icon={PlainArrowNext}
                navigateTo={{ screen: 'AccessibilityActionPlan' }}
              />
            </TypoDS.BodyXs>
          </BulletListItem>
          <BulletListItem>
            <TypoDS.BodyXs>
              <InternalTouchableLink
...
