...
        navigateTo: {
          screen: 'BonificationRequiredInformation',
          params: { bonificationType: BonificationType.DISABILITY },
        },
      }}
      buttonTertiary={{
        wording: 'Fermer',
        onPress: goBack,
        icon: PlainArrowPrevious,
      }}>
      <ViewGap gap={4}>
        <StyledBody>
          Après vérification, tu ne réponds pas aux critères d’éligibilité permettant de bénéficier
...
