...

export const PublicDisabilityServices = () => {
  const sortedServices = [...PUBLIC_SERVICES].sort((a, b) => a.name.localeCompare(b.name, 'fr'))

  return (
    <PageWithHeader
      title="Outils et services publics"
      scrollChildren={
        <ViewGap gap={5}>
          <Typo.Title3 {...setTextSemantic('h2')}>Des services pensés pour toi</Typo.Title3>
          <Typo.Body>
            Retrouve ici les outils et services publics pensés pour t’accompagner et rendre la
            société plus accessible à tous.
...
