appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- tapOn: "Films, séries, cinéma"

#- TODO trouver une solution pour cliquer sans passer par la position (actuellement il est simplement possible de cliquer en connaissant l'offre).
- tapOn: SPIDER-MAN NEW GENERATION # nom de l'offre consultable
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: src/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- tapOn: "Catégories\_: Filtre sélectionné"
- tapOn: "Films, séries, cinéma"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearch.yml
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn: SPIDER-MAN NEW GENERATION # nom de l'offre consultable
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: src/features/bookOffer/PreBookingPage.yml # PreBookingReservation
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConfirmReservation.yml
- runFlow: src/features/bookOffer/BookingConfirmationPage.yml # BookingConfirmationPage
- tapOn: "Voir ma réservation"
- assertVisible: "Pour profiter de ta réservation, tu dois présenter ta carte d’identité\
    \ et ce code à 6 caractères. N’oublie pas que tu n’as pas le droit de le revendre\
    \ ou le céder."
- assertVisible: "Ma réservation"
- tapOn:
      id: "animated-icon-back"
- assertVisible:
      text: "Mes réservations"
      index: 0
- assertVisible: "Mes réservations"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
      point: "61%,16%"
- scrollUntilVisible:
      element: "Annuler ma réservation"
      direction: DOWN
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonCancelMyReservation.yml
- runFlow: src/features/bookings/BookingCancellationPage.yml # BookingCancellationPage
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonCancelMyReservation.yml
- assertVisible: "Réservations terminées"
- runFlow: reusableFlows/StopApp.yml # Stop App