appId: ${MAESTRO_APP_ID}
---
# Quitte la venue pour retourner vers l'offre afin de la réserver
- back

- waitForAnimationToEnd

- tapOn: 'Réserver l’offre'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- scrollUntilVisible:
    element: 'Confirmer la réservation'
- tapOn: 'Confirmer la réservation'

- assertVisible: "Réservation confirmée\_!"
- tapOn:
    text: 'Voir ma réservation'
    retryTapIfNoChange: true

- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
