appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn:
    label: 'Sélection de la 1ère offre disponible'
    below:
      text: .*résultats

- tapOn: 'Réserver l’offre'

- assertVisible: 'Détails de la réservation'
- tapOn: "J’ai lu et j’accepte les conditions générales d’utilisation"
- scrollUntilVisible:
    element: 'Confirmer la réservation'
- tapOn: 'Confirmer la réservation'

- assertVisible: "Réservation confirmée\_!"
- tapOn: 'Voir ma réservation'

- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
