appId: ${MAESTRO_APP_ID}
tags:
  - activation
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'EMAIL_VALIDATION'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml

- runFlow:
    file: ../common/helpers/FillProfile.yml

- tapOn: 'Identification - non complété'

- tapOn: 'J’ai un titre de séjour, une carte d’identité ou un passeport étranger.'

- assertVisible: 'Identifie-toi sur le site demarche.numerique.gouv.fr'

- runFlow:
    file: ../common/navigation/TapOnBack.yml

- tapOn: 'J’ai une carte d’identité ou un passeport français'

- tapOn: 'J’ai ma pièce d’identité en cours de validité - Les copies ne sont pas acceptées'

- tapOn: 'Vérifier plus tard'

- tapOn: 'Quitter'

- runFlow: ../common/lifecycle/StopApp.yml
