appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "Accessibilité"
    direction: DOWN
- tapOn: "Accessibilité"
- tapOn: "Les engagements du pass Culture"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Parcours recommandés"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Déclaration d’accessibilité"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Schéma pluriannuel"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/StopApp.yml # Stop App