appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- scroll
- tapOn: "Accessibilité"
- tapOn: "Les engagements du pass Culture"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Parcours recommandés"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Déclaration d’accessibilité"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- tapOn: "Schéma pluriannuel"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/StopApp.yml # Stop App