appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element: 'Partager le pass Culture'
- tapOn: 'Accessibilité'
- assertVisible: 'Accessibilité'

- tapOn: 'Plan du site'
- assertVisible: 'Plan du site'
- runFlow:
    file: ../common/navigation/TapOnBack.yml

- tapOn:
    text: 'Nouvelle fenêtre : Les engagements du pass Culture'
    index: 0
- runFlow:
    when:
      platform: iOS
      visible: 'Fermer'
    commands:
      - tapOn: 'Fermer'

- runFlow:
    when:
      visible: 'Afficher les signets, le menu Partager et les onglets ouverts'
    commands:
      - tapOn: 'fermer le pop-up'
- assertVisible: 'Accessibilité'
- assertVisible: "L'accessibilité au pass Culture"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- tapOn: 'Nouvelle fenêtre : Schéma pluriannuel'
- assertVisible: 'Schéma pluriannuel.*'
- assertVisible: 'Introduction'
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir à pass Culture S'

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- tapOn: 'Déclaration d’accessibilité - Android'
- assertVisible: 'Déclaration d’accessibilité - Android'
- runFlow:
    file: ../common/navigation/TapOnBack.yml

- tapOn: 'Déclaration d’accessibilité - iOS'
- assertVisible: 'Déclaration d’accessibilité - iOS'
- runFlow:
    file: ../common/navigation/TapOnBack.yml

- tapOn: 'Déclaration d’accessibilité - web'
- assertVisible: 'Déclaration d’accessibilité web'
- runFlow:
    file: ../common/navigation/TapOnBack.yml

- tapOn: 'Outils et services publics pour les personnes en situation de handicap'
- assertVisible: 'Outils et services publics'
- runFlow:
    file: ../common/navigation/TapOnBack.yml

- runFlow:
    file: ../common/navigation/TapOnBack.yml

- runFlow: ../common/lifecycle/StopApp.yml
