appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: 'Confidentialité'
- tapOn: 'Accessibilité'
- assertVisible: 'Accessibilité'

- tapOn: 'Plan du site'
- assertVisible: 'Plan du site'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn:
    text: 'Nouvelle fenêtre : Les engagements du pass Culture'
    index: 0
- assertVisible: 'Accessibilité'
- assertVisible: "L'accessibilité au pass Culture"
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn: 'Nouvelle fenêtre : Schéma pluriannuel'
- assertVisible: 'Schéma pluriannuel.*'
- assertVisible: 'Introduction'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn: 'Déclaration d’accessibilité - Android'
- assertVisible: 'Déclaration d’accessibilité - Android'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn: 'Déclaration d’accessibilité - iOS'
- assertVisible: 'Déclaration d’accessibilité - iOS'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn: 'Déclaration d’accessibilité - web'
- assertVisible: 'Déclaration d’accessibilité web'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- tapOn: 'Outils et services publics pour les personnes en situation de handicap'
- assertVisible: 'Outils et services publics'
- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml
